<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/url_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage"
        android:text="@string/edittext_url"
        android:layout_margin="10sp" />

    <Button
        android:id="@+id/url_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_url"
        android:layout_margin="10sp"
        android:onClick="openWebsite"/>

    <EditText
        android:id="@+id/loc_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage"
        android:text="@string/edittext_loc"
        android:layout_margin="10sp" />

    <Button
        android:id="@+id/loc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_loc"
        android:layout_margin="10sp"
        android:onClick="openLocation"/>

    <EditText
        android:id="@+id/share_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage"
        android:text ="@string/edittext_share"
        android:layout_margin="10sp" />
    >

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:layout_margin="10sp"
        android:onClick="shareText"/>

    <Button
        android:id="@+id/pic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Take A Picture"
        android:onClick="openCamera"/>


</LinearLayout>